--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^7.15.0",
     "firebaseui": "^4.5.1",
     "jquery": "^3.5.1",
+    "moment": "^2.26.0",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
